--- a/index.html
+++ b/index.html
@@ -57,8 +57,26 @@
       two hours before serving.
     </p>
   </section>
-  <div>
+  <div class="recipeList">
     <img id="listBg" src="img/list-bg.png" alt="list" />
+    <div>
+      <ul class="recipeItems">
+        <li><input type="checkbox">1 1/2 cups milk</li>
+        <li><input type="checkbox">1/2 cup mascarpone</li>
+        <li><input type="checkbox">1/2 tsp pink salt</li>
+        <li><input type="checkbox">1 lb Black Mission Figs</li>
+        <li><input type="checkbox">1/2 cup brown sugar</li>
+        <li><input type="checkbox">2-4 tbsp water</li>
+      </ul>
+      <ul class="recipeItemsTwo">
+        <li><input type="checkbox">1 1/2 cups heavy cream</li>
+        <li><input type="checkbox">1/3 granulated sugar</li>
+        <li><input type="checkbox">2 egg yolks</li>
+        <li><input type="checkbox">1 lemon, juiced</li>
+        <li><input type="checkbox">2 tbsp butter</li>
+        <li><input type="checkbox">1 cup honey roasted pecans, roughly chopped</li>
+      </ul>
+    </div>
   </div>
   <img id="footerDivider" src="img/hr-img.png" />
   <footer>
